--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,3 +1,4 @@
+/* MOBILE FIRST */
 #a {
     width: 480px;
     height: 75px;
@@ -88,6 +89,99 @@ footer {
     clear: right;
     margin-bottom: 10px;
 }
+
+/* TABLET STUFF STARTS HERE */
+@media only screen and (min-width: 680px) { 
+    #a, #b, #c, #d {
+        width: 624px;
+    }
+    
+    #a {
+        height: 75px;
+        border: 1px solid black;
+        background-color: rgb(12, 105, 67);
+        text-align: center;
+        line-height: 75px;
+        margin-top: 10px;
+    }
+    
+    #b {
+        height: 150px;
+        border: 1px solid black;
+        background-color: rgb(17, 134, 66);
+        text-align: center;
+        line-height: 150px;
+    }
+    
+    #c {
+        height: 125px;
+        border: 1px solid black;
+        background-color: rgb(4, 56, 15);
+        text-align: center;
+        line-height: 125px;
+        float: left;
+    }
+    
+    #d {
+        height: 125px;
+        border: 1px solid black;
+        background-color: rgb(14, 110, 54);
+        text-align: center;
+        line-height: 125px;
+        float: right;
+    }
+
+    #e, #f, #g, #h {
+        width: 312px;
+    }
+    
+    #e {
+        height: 250px;
+        border: 1px solid black;
+        background-color: rgb(15, 88, 38);
+        text-align: center;
+        line-height: 250px;
+        float: left;
+    }
+    
+    #f {
+        height: 250px;
+        border: 1px solid black;
+        background-color: rgb(10, 119, 37);
+        text-align: center;
+        line-height: 250px;
+        float: right;
+    }
+    
+    #g {
+        border: 1px solid black;
+        background-color: rgb(4, 114, 32);
+        text-align: center;
+        line-height: 250px;
+        float: left;
+        margin: 0px 0px 0px 0px;
+    }
+    
+    #h {
+        height: 250px;
+        border: 1px solid black;
+        background-color: rgb(12, 90, 32);
+        text-align: center;
+        line-height: 250px;
+        float: right;
+    }
+    
+    footer {
+        width: 624px;
+        height: 80px;
+        border: 1px solid black;
+        background-color: rgb(11, 68, 11);
+        text-align: center;
+        line-height: 80px;
+        clear: right;
+        margin-bottom: 10px;
+    }
+  }
 
 /* DESKTOP STUFF STARTS HERE */
 
